[package]
name = "wireframeTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
three-d = {git = "https://github.com/asny/three-d"}
three-d-asset = {git="https://github.com/asny/three-d-asset",features = ["obj", "http"] }
rand = "0.8.5"
#wasm-bindgen = "0.2"
#tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"